FIX working cargo path

--- a/github-runner/Dockerfile
+++ b/github-runner/Dockerfile
@@ -14,7 +14,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
 
 # Get Rust
 RUN curl https://sh.rustup.rs -sSf | bash -s -- -y
-RUN echo 'source $HOME/.cargo/env' >> $HOME/.bashrc
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 # Get wasm dependencies
 RUN rustup target add wasm32-unknown-unknown
